Trying to resolve a bug on iPhone X

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ body {
 /* MEDIA BREAKPOINTS */
 @media (max-width: 576px) {
     #bgButton i {
-        margin: 0 auto;
+        margin: 0;
     }
 }
 
